# ShutterSort

./: .gitignore  CMakeLists.txt  README.md  Sorter.cpp  main.cpp  map.cpp  parce.py  sorter.h  vcpkg.json
ShutterSort/: CMakeLists.txt  ShutterSort.qmlproject  ShutterSort.qmlproject.qtds  UI Documentation  UI Documentation.md  mainwindow.ui  qmlmodules
ShutterSort/content/: App.qml  Screen01.ui.qml  UploadButton.ui.qml
ShutterSort/imports/: CMakeLists.txt
ShutterSort/imports/ShutterSort/: CMakeLists.txt  qmldir
ShutterSort/imports/ShutterSort/designer/: plugin.metainfo
ShutterSort/src/: import_qml_plugins.h  main.cpp
Vagrant_Files/: Dockerfile  README.md  Vagrantfile
code/: LocalImage.h
documentation/: Project Management Plan.docx  ShutterSort-Class-Diagram-2.drawio  ShutterSort-Class-Diagram.drawio  ShutterSort-UMLCaseDiagram.drawio  Software-Requirements-Spec.docx  Test Case Tables.docx
src/: LocalImage.cpp  LocalImage.h  ShutterSort.rc  Sorter.cpp  Sorter.h  SortingMethod.cpp  anchor.cpp  anchor.h  application.cpp  application.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  metadata.cpp  metadata.h  shuttersort.h  sort.cpp  sortingfunctions.cpp  sortingfunctions.h  sortingmethod.h  sortingmethod_qt.cpp  sortingmethod_qt.h  sortingmethod_qt.ui  sorttimer.cpp  sorttimer.h  test.cpp  timer.cpp  timer.h
